[gd_scene load_steps=4 format=3 uid="uid://cp537rvf7vhsi"]

[ext_resource type="Script" uid="uid://kxsgirmby237" path="res://components/table_view/table/row_columns/row_columns.gd" id="1_myn47"]
[ext_resource type="PackedScene" uid="uid://s1d41es15ac6" path="res://components/table_view/table/empty_header/empty_header.tscn" id="2_lyjsh"]
[ext_resource type="PackedScene" uid="uid://sh6ey856183" path="res://components/table_view/table/row_separator/row_separator.tscn" id="3_p4cuy"]

[node name="RowColumns" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myn47")

[node name="Row" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="EmptyHeader" parent="Row" instance=ExtResource("2_lyjsh")]
unique_name_in_owner = true
layout_mode = 2

[node name="Columns" type="HBoxContainer" parent="Row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RowSeparator" parent="." node_paths=PackedStringArray("row") instance=ExtResource("3_p4cuy")]
layout_mode = 2
row = NodePath("../Row")

[connection signal="add_column_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_add_column_requested"]
[connection signal="add_row_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_add_row_requested"]
[connection signal="clear_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_clear_requested"]
[connection signal="copy_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_copy_requested"]
[connection signal="cut_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_cut_requested"]
[connection signal="minimum_size_changed" from="Row/EmptyHeader" to="." method="_on_empty_header_minimum_size_changed"]
[connection signal="paste_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_paste_requested"]
[connection signal="redo_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_redo_requested"]
[connection signal="undo_requested" from="Row/EmptyHeader" to="." method="_on_empty_header_undo_requested"]
